--- a/index.html
+++ b/index.html
@@ -24,5 +24,45 @@
             </a>
         </h1>
     </header>
+
+    <!--
+        mainタグの作成
+        ・profile用とwork用の箱を作成する
+        →divタグを使っていきます
+    -->
+    <div class="block-main">
+     <!-- profileの箱 -->
+        <div class="box-profile">
+            <h2 class="sab-title">
+                <span class="color-green">P</span>rofile
+            </h2>
+            <div class="item-list">
+                <img src="img/black-cat.png" alt="プロフィール画像" width="110" height="110">
+                <b>テック　太郎</b>
+                <p class="color-green">HTML/ CSS/ PHP/ MySQL/ Laravel/ Adobe XD</p>
+                <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+            </div>
+            <ul class="icon-list">
+                <li>
+                    <a href="">
+                        <img src="img/github.png" alt="githubアイコン" width="40" height="40">  
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/twitter.png" alt="Twitterアイコン" width="40" height="40">
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+
+     <!-- workの箱 -->
+        <div>
+
+        </div>
+
+
+    </div>
 </body>
 </html>
