--- a/index.html
+++ b/index.html
@@ -58,11 +58,54 @@
         </div>
 
      <!-- workの箱 -->
-        <div>
+     <div class="box-works">
+        <h2 class="sub-title">
+            <span class="color-green">W</span>orks
+        </h2>
 
-        </div>
+        <ul class="works-list">
+            <li>
+                <img src="img/work_1.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
 
+            <li>
+                <img src="img/work_2.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
 
+            <li>
+                <img src="img/work_3.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML / CSS / PHP / MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
+        </ul>
     </div>
+
+</div>
+
+<!--
+    footerタグの作成
+    ・copyrightの設定
+    →pタグを使います
+-->
+<footer class="block-footer">
+    <p>Copyright ©︎ TECH I.S., Inc.</p>
+</footer>
+
 </body>
 </html>
